--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,72 @@
 <resources>
     <string name="app_name">Kat-Alog</string>
+    <string name="cat_name">Name</string>
+    <string name="cat_description">Description</string>
+    <string name="list">List</string>
+    <string name="grid">Grid</string>
+
+    <string-array name="data_name">
+        <item>Abyssinian</item>
+        <item>American Shorthair</item>
+        <item>Arabian Mau</item>
+        <item>Bambino</item>
+        <item>Birman</item>
+        <item>British Longhair</item>
+        <item>British Shorthair</item>
+        <item>Chausie</item>
+        <item>Cheetoh</item>
+        <item>Cornish Rex</item>
+    </string-array>
+
+    <string-array name="data_image_url">
+        <item>https://cdn2.thecatapi.com/images/0XYvRd7oD.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/JFPROfGtQ.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/k71ULYfRr.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/5AdhMjeEu.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/HOrX5gwLS.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/7isAO4Cav.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/s4wQfYoEk.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/vJ3lEYgXr.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/IFXsxmXLm.jpg</item>
+        <item>https://cdn2.thecatapi.com/images/unX21IBVB.jpg</item>
+    </string-array>
+
+    <string-array name="data_description">
+        <item>The Abyssinian is easy to care for, and a joy to have in your home. They’re affectionate cats and love both people and other animals.</item>
+        <item>The American Shorthair is known for its longevity, robust health, good looks, sweet personality, and amiability with children, dogs, and other pets.</item>
+        <item>Arabian Mau cats are social and energetic. Due to their energy levels, these cats do best in homes where their owners will be able to provide them with plenty of playtime, attention and interaction from their owners. These kitties are friendly, intelligent, and adaptable, and will even get along well with other pets and children.</item>
+        <item>The Bambino is a breed of cat that was created as a cross between the Sphynx and the Munchkin breeds. The Bambino cat has short legs, large upright ears, and is usually hairless. They love to be handled and cuddled up on the laps of their family members.</item>
+        <item>The Birman is a docile, quiet cat who loves people and will follow them from room to room. Expect the Birman to want to be involved in what you’re doing. He communicates in a soft voice, mainly to remind you that perhaps it’s time for dinner or maybe for a nice cuddle on the sofa. He enjoys being held and will relax in your arms like a furry baby.</item>
+        <item>The British Longhair is a very laid-back relaxed cat, often perceived to be very independent although they will enjoy the company of an equally relaxed and likeminded cat. They are an affectionate breed, but very much on their own terms and tend to prefer to choose to come and sit with their owners rather than being picked up.</item>
+        <item>The British Shorthair is a very pleasant cat to have as a companion, ans is easy going and placid. The British is a fiercely loyal, loving cat and will attach herself to every one of her family members. While loving to play, she doesn\'t need hourly attention. If she is in the mood to play, she will find someone and bring a toy to that person. The British also plays well by herself, and thus is a good companion for single people.</item>
+        <item>For those owners who desire a feline capable of evoking the great outdoors, the strikingly beautiful Chausie retains a bit of the wild in its appearance but has the house manners of our friendly, familiar moggies. Very playful, this cat needs a large amount of space to be able to fully embrace its hunting instincts.</item>
+        <item>The Cheetoh has a super affectionate nature and real love for their human companions; they are intelligent with the ability to learn quickly. You can expect that a Cheetoh will be a fun-loving kitty who enjoys playing, running, and jumping through every room in your house.</item>
+        <item>This is a confident cat who loves people and will follow them around, waiting for any opportunity to sit in a lap or give a kiss. He enjoys being handled, making it easy to take him to the veterinarian or train him for therapy work. The Cornish Rex stay in kitten mode most of their lives and well into their senior years. </item>
+    </string-array>
+
+    <string-array name="data_origin">
+        <item>Egypt</item>
+        <item>United States</item>
+        <item>United Arab Emirates</item>
+        <item>United States</item>
+        <item>France</item>
+        <item>United Kingdom</item>
+        <item>United Kingdom</item>
+        <item>Egypt</item>
+        <item>United States</item>
+        <item>United Kingdom</item>
+    </string-array>
+
+    <string-array name="data_lifespan">
+        <item>14 - 15</item>
+        <item>15 - 17</item>
+        <item>12 - 14</item>
+        <item>12 - 14</item>
+        <item>14 - 15</item>
+        <item>12 - 14</item>
+        <item>12 - 17</item>
+        <item>12 - 14</item>
+        <item>12 - 14</item>
+        <item>11 - 14</item>
+    </string-array>
 </resources>
